--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "express": "^4.21.2",
+    "mongodb": "^6.13.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   }
