--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^4.17.21",
+    "body-parser": "^1.20.2",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "yup": "^1.6.1"
   }
 }
