--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "description": "",
   "dependencies": {
     "@types/body-parser": "^1.19.5",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
+    "mongoose": "^8.9.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
     "yup": "^1.6.1"
