--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/body-parser": "^1.19.5",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.6",
     "ts-node-dev": "^2.0.0",
